--- a/MauiAndroidKeyboard/Views/MainView.xaml
+++ b/MauiAndroidKeyboard/Views/MainView.xaml
@@ -22,7 +22,7 @@
 		</Grid>
 
 		<Grid Grid.Row="1" Grid.Column="0">
-			<Label Text="User ID"/>
+			<Label Text="User ID" VerticalTextAlignment="End" />
 		</Grid>
 
 		<Grid Grid.Row="1" Grid.Column="1">
@@ -36,7 +36,7 @@
 		</Grid>
 
         <Grid Grid.Row="2" Grid.Column="0">
-            <Label Text="Password"/>
+            <Label Text="Password" VerticalTextAlignment="End"/>
         </Grid>
 
         <Grid Grid.Row="2" Grid.Column="1">
