--- a/MauiAndroidKeyboard/Views/HandlerEntryView4.xaml
+++ b/MauiAndroidKeyboard/Views/HandlerEntryView4.xaml
@@ -4,11 +4,11 @@
 			 x:Class="MauiAndroidKeyboard.Views.HandlerEntryView4"
 			 xmlns:vm="clr-namespace:MauiAndroidKeyboard.ViewModels"             
 			 xmlns:controls="clr-namespace:MauiAndroidKeyboard.Controls"
-			 Unloaded="pg_Unloaded"
+			 Unloaded="OnContentPageUnloaded"
 			 xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
 			 ios:Page.UseSafeArea="False"             
 			 Title="HandlerEntryView4"
-             x:Name="pg">
+			 x:Name="_page">
 
 	<ContentPage.BindingContext>
 		<vm:HandlerEntryViewModel4 x:Name="vm"/>
@@ -21,48 +21,49 @@
 					 Clicked="ToolbarItemKeyboard_Clicked"/>
 	</ContentPage.ToolbarItems>
 
-
-
 	<Grid RowDefinitions="100, 50, 50, 50, 50"
 		  ColumnDefinitions="120, *">
 
 		<Grid Grid.Row="0" Grid.ColumnSpan="2">
-			<Label 
-			Text="Welcome to .NET MAUI!"
-			VerticalOptions="Center" 
-			HorizontalOptions="Center" />
+			<Label Text="Welcome to .NET MAUI!"
+				   VerticalOptions="Center" 
+				   HorizontalOptions="Center" />
 		</Grid>
 
 		<Grid Grid.Row="1" Grid.Column="0">
-			<Label Text="User ID" VerticalTextAlignment="End" />
+			<Label Text="User ID" VerticalTextAlignment="Center" />
 		</Grid>
 
 		<Grid Grid.Row="1" Grid.Column="1">
 			<controls:HandlerEntry4 x:Name="UserIDEntry"
-									 Text="{Binding UserID}"
-									 IsTextPredictionEnabled="false" 
-									 ClearButtonVisibility="WhileEditing"
-									 ShowVirtualKeyboardOnFocus="False"
-									 Focused="UserIDEntry_Focused"
-									 ReturnCommand="{Binding UserIDCompletedCommand}"
-									 ReturnCommandParameter="{x:Reference Name=pg}">
+									VerticalTextAlignment="End"
+									Text="{Binding UserID}"
+									IsSpellCheckEnabled="False"
+									IsTextPredictionEnabled="False" 
+									ShowVirtualKeyboardOnFocus="False"
+									Focused="UserIDEntry_Focused"
+									Unfocused="UserIDEntry_Unfocused"
+									ReturnCommand="{Binding UserIDCompletedCommand}"
+									ReturnCommandParameter="{x:Reference Name=_page}">
 			</controls:HandlerEntry4>
 		</Grid>
 
 		<Grid Grid.Row="2" Grid.Column="0">
-			<Label Text="Password" VerticalTextAlignment="End"/>
+			<Label Text="Password" VerticalTextAlignment="Center"/>
 		</Grid>
 
 		<Grid Grid.Row="2" Grid.Column="1">
 			<controls:HandlerEntry4 x:Name="PasswordEntry"
-									 Text="{Binding Password}"
-									 IsTextPredictionEnabled="false" 
-									 ShowVirtualKeyboardOnFocus="False"
-									 Keyboard="Numeric"
-									 Focused="PasswordEntry_Focused"
-									 ClearButtonVisibility="WhileEditing"
-									 ReturnCommand="{Binding PasswordCompletedCommand}"
-									 ReturnCommandParameter="{x:Reference Name=pg}">
+									Text="{Binding Password}"
+									IsSpellCheckEnabled="False"
+									IsTextPredictionEnabled="False" 
+									ShowVirtualKeyboardOnFocus="False"
+									ClearButtonVisibility="WhileEditing"
+									Keyboard="Numeric"
+									Unfocused="PasswordEntry_Unfocused"
+									Focused="PasswordEntry_Focused"
+									ReturnCommand="{Binding PasswordCompletedCommand}"
+									ReturnCommandParameter="{x:Reference Name=_page}">
 			</controls:HandlerEntry4>
 		</Grid>
 	</Grid>
