--- a/MauiAndroidKeyboard/Views/MainView.xaml
+++ b/MauiAndroidKeyboard/Views/MainView.xaml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 			 x:Class="MauiAndroidKeyboard.Views.MainView"
@@ -13,7 +13,7 @@
 		<vm:MainViewModel x:Name="vm"/>
 	</ContentPage.BindingContext>
 
-	<StackLayout Orientation="Vertical">
+	<StackLayout Orientation="Vertical" Spacing="20">
 
 		<Button Text="Renderer Entry"
 				Command="{Binding NavigateCommand}"
